added validation on simple required fields, resolved error when editing 1st list item

--- a/src/index.css
+++ b/src/index.css
@@ -6,3 +6,9 @@ body {
 .error-message {
   color: red;
 }
+.recipe-detail-list-field:valid ~ .form-list-field-invalid {
+  display: none;
+}
+.recipe-detail-field:valid ~ .form-field-invalid {
+  display: none;
+}
